-
Bug
-
Resolution: Done
-
P2: Important
-
5.7.0
-
Windows, MSVC2013 64-bit
-
793518927073fe101149acdc6ba672c40c565027
On Windows, it appears that WebView's url property no longer accepts string literal. eg.
WebView
{ url: "http://alterslash.org" anchors.fill: parent }This worked in Qt 5.6, and it seems to work in Qt 5.7.0 RC on Android as well.
To reproduce, I just used the minibrowser example and changed the url property from being initialUrl to "http://alterslash.org".
- duplicates
-
QTBUG-54668 WebView doesn't load initial URL
-
- Closed
-
- is duplicated by
-
QTBUG-55756 Problem with URL or WebView on MacOSX
-
- Closed
-