Fix initialization of the WebView item

Don't delay initialization until we're inserted into the scene, as this
will cause every property change/function call that happens before that
to be dropped.

Task-number: QTBUG-53839
Change-Id: I1a2f9066c7b172e14095d7513f343e34812f7d1a
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>